# bevy-hikari

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
assets/models/: cornell.glb
assets/models/City/: scene.gltf
assets/models/Cornell/: license.txt  scene.gltf
assets/models/Extinguisher/: README.txt  extinguisher.fbx  extinguisher.mtl
assets/screenshots/dissection/: direct-shading.dds  indirect-shading.dds
assets/shaders/: octree.wgsl  voxel.wgsl
examples/: bakery.rs  city.rs  cornell.rs  minimal.rs  scene.rs  simple.rs
src/: deferred.rs  direct.rs  generate_noise_includes.sh  illumination.rs  image.rs  irradiance.rs  lib.rs  light.rs  main.rs  mesh.rs  mipmap.rs  overlay.rs  post_process.rs  prelude.rs  prepass.rs  storage_vec.rs  tracing.rs  transform.rs  utils.rs  view.rs  volume.rs  voxel.rs  voxel.wgsl  voxel_cone_tracing.rs  voxel_gi.rs
src/mesh/: instance.rs  material.rs  mesh.rs  mod.rs
src/mesh_material/: instance.rs  material.rs  mesh.rs  mod.rs
src/post_process_fs/: denoise.rs  mod.rs  nearest_velocity.rs  smaa.rs
src/shaders/: albedo.wgsl  deferred.wgsl  deferred_bindings.wgsl  denoise.wgsl  illumination.wgsl  irradiance.wgsl  legacy.wgsl  light.wgsl  mesh_material_bindings.wgsl  mesh_material_types.wgsl  mesh_view_bindings.wgsl  mesh_view_types.wgsl  mipmap.wgsl  mipmap_base.wgsl  octree.wgsl  overlay.wgsl  post_process.wgsl  prepass.wgsl  ray_tracing_bindings.wgsl  ray_tracing_functions.wgsl  ray_tracing_types.wgsl  reservoir_bindings.wgsl  reservoir_functions.wgsl  reservoir_types.wgsl  smaa.wgsl  standard_material.wgsl  taa.wgsl  tone_mapping.wgsl  tracing.wgsl  utils.wgsl  volume_struct.wgsl  voxel.wgsl
src/shaders/fsr/: FSR_Pass.glsl  compile.bat  ffx_a.h  ffx_fsr1.h  fsr_pass_easu.glsl  fsr_pass_easu.spv  fsr_pass_rcas.glsl  fsr_pass_rcas.spv  texture_gather.glsl
src/shaders/post_process/: demodulation.wgsl  denoise.wgsl  modulation.wgsl  nearest_velocity.wgsl  smaa.wgsl
src/utils/: custom_camera.rs  mod.rs
src/voxel_cone_tracing/: mod.rs  overlay.rs  tracing.rs  voxel.rs
