[package]
name = "bevy-hikari"
version = "0.3.1"
edition = "2021"
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
license = "MIT OR Apache-2.0"
description = "Realtime Path Tracer for the Bevy Engine."
homepage = "https://github.com/cryscan/bevy-hikari"
repository = "https://github.com/cryscan/bevy-hikari"
keywords = ["gamedev", "graphics", "bevy", "3d"]
categories = ["game-engines", "rendering"]
exclude = ["assets"]

[features]
default = []
warn_mesh_load = []

[dependencies]
bytemuck = "1.9"
itertools = "0.10"
bvh = "0.7.0"
bitflags = "1.3"
serde = "1.0"
serde_variant = "0.1.1"
num-traits = "0.2"
num-derive = "0.3"

[dependencies.bevy]
version = "0.9"
default-features = false
features = ["bevy_asset", "bevy_render", "bevy_pbr", "bevy_core_pipeline"]

[dev-dependencies]
bevy = { version = "0.9", default-features = true, features = [
    "bevy_gltf",
    "jpeg",
    "png",
    "x11",
] }
smooth-bevy-cameras = "0.5"
bevy_mod_raycast = "0.6"
bevy-inspector-egui = "0.13"
